<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/pathButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="pathActivity"
            android:text="@string/digivolution_path_finder"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/statButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="statActivity"
            android:text="@string/digimon_stats"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/skillButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="skillActivity"
            android:text="@string/skill_stats"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>